--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/logo-IOT.png" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/logo_bubblebrown.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="logo-IOT.png" />
+  <link rel="apple-touch-icon" href="logo_bubblebrown.png" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
   <!--
@@ -61,7 +61,7 @@
       });
     });
   </script> -->
-  <title>IOT WASHING MACHINE</title>
+  <title>BuBBle Brown Coffee</title>
 </head>
 
 <body>
